# opencheir

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml.example
data/: bid_frameworks.json  toms.json
docs/plans/: 2026-03-08-sentinel-design.md  2026-03-08-sentinel-implementation.md  2026-03-09-enforcer-hotreload-domain-locking-design.md  2026-03-09-enforcer-hotreload-domain-locking-plan.md  2026-04-07-tender-killer-design.md
src/: config.rs  lib.rs  main.rs
src/domain/: bid.rs  eyes.rs  mod.rs  ontology.rs  qa.rs  social_value.rs  tender.rs
src/gateway/: mod.rs  proxy.rs  router.rs  server.rs
src/orchestration/: enforcer.rs  enforcer_api.rs  lineage.rs  mod.rs  patterns.rs  skills.rs  supervisor.rs
src/orchestration/hive/: coordinator.rs  locks.rs  memory.rs  mod.rs  planner.rs  spawner.rs
src/sentinel_core/: documents.rs  search.rs  state.rs
src/sentinel_core/migrations/: 001_initial.sql
src/store/: graph.rs  mod.rs  search.rs  state.rs
src/store/migrations/: 001_initial.sql  002_ontology_versions.sql  003_domain_locks.sql
static/: eyes.html
tests/: bid_test.rs  cli_test.rs  config_test.rs  documents_test.rs  enforcer_test.rs  eyes_test.rs  gateway_test.rs  graph_remote_test.rs  graph_test.rs  hive_test.rs  init_test.rs  lineage_test.rs  onto_integration_test.rs  onto_phase2_test.rs  ontology_test.rs  ontology_version_test.rs  patterns_test.rs  proxy_test.rs  qa_test.rs  router_test.rs  search_test.rs  seed_test.rs  skills_test.rs  social_value_test.rs  state_test.rs  supervisor_test.rs  tender_test.rs
