[package]
name = "opencheir"
version = "0.1.0"
edition = "2024"
description = "Lightweight, open-source document governance MCP server"
license = "MIT"
repository = "https://github.com/FABIOTESS/opencheir"

[[bin]]
name = "opencheir"
path = "src/main.rs"

[dependencies]
# MCP protocol
rmcp = { version = "1", features = ["server", "transport-io"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server (lineage API, eyes)
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }

# WebSocket (eyes)
tokio-tungstenite = "0.28"

# JSON Schema (needed for MCP tool parameter schemas)
schemars = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Document handling
docx-rs = "0.4"

# Search
regex = "1"
rust-stemmers = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# File watching
notify = "8"
walkdir = "2"
glob = "0.3"

# Image handling (eyes)
image = "0.25"

# HTTP client (health checks)
reqwest = { version = "0.12", features = ["json"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
anyhow = "1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
